apollo-router/src/plugins/subgraph_cache/snapshots/apollo_router__plugins__cache__tests__insert_with_nested_field_set-6.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "allProducts": [
      {
        "name": "Test",
        "createdBy": {
          "name": "test",
          "country": {
            "a": "France"
          }
        }
      }
    ]
  }
}
